<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GouthamApartmentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            style="@style/header"
            android:text="@string/Apartment"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/apartment1"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    style="@style/Details"
                    android:text="@string/Address1" />
                <TextView
                    style="@style/Details"
                    android:text="@string/apartmentDiscription1"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/apartmentPrice1"
                    />
            </LinearLayout>

            <CheckBox
                android:id="@+id/gouthamCheckBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/apartment2"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    style="@style/Details"
                    android:text="@string/Address2"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/apartmentDiscription2"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/apartmentPrice2"
                    />
            </LinearLayout>

            <CheckBox
                android:id="@+id/gouthamCheckBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/apartment3"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    style="@style/Details"
                    android:text="@string/Address3"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/apartmentDiscription3"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/apartmentPrice3"
                    />
            </LinearLayout>

            <CheckBox
                android:id="@+id/gouthamCheckBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/apartment6" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    style="@style/Details"
                    android:text="@string/Address4"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/apartmentDiscription4"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/apartmentPrice4"
                    />
            </LinearLayout>

            <CheckBox
                android:id="@+id/gouthamCheckBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/apartment7" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    style="@style/Details"
                    android:text="@string/Address5"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/apartmentDiscription5"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/apartmentPrice5"
                    />
            </LinearLayout>

            <CheckBox
                android:id="@+id/gouthamCheckBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/Next"
            style="@style/enter"
            android:backgroundTint="#B12828"
            android:text="@string/nextButton" />

    </LinearLayout>

</ScrollView>