<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GouthamSemiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            style="@style/header"
            android:text="Semi-Detached Homes"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/semi1"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    style="@style/Details"
                    android:text="@string/semiAddress1"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/semiDiscription1"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/semiPrice1"
                    />
            </LinearLayout>

            <CheckBox
                android:id="@+id/gouthamSemiCheckBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/semi2"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    style="@style/Details"
                    android:text="@string/semiAddress2"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/semiDiscription2"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/semiPrice2"
                    />
            </LinearLayout>

            <CheckBox
                android:id="@+id/gouthamSemiCheckBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/semi3"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    style="@style/Details"
                    android:text="@string/semiAddress3"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/semiDiscription3"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/semiPrice3"
                    />
            </LinearLayout>

            <CheckBox
                android:id="@+id/gouthamSemiCheckBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/semi4"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    style="@style/Details"
                    android:text="@string/semiAddress4"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/semiDiscription4"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/semiPrice4"
                    />
            </LinearLayout>

            <CheckBox
                android:id="@+id/gouthamSemiCheckBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/semi5"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    style="@style/Details"
                    android:text="@string/semiAddress5"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/semiDiscription5"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/semiPrice5"
                    />
            </LinearLayout>

            <CheckBox
                android:id="@+id/gouthamSemiCheckBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/gouthamSemiNextButton"
            style="@style/enter"
            android:backgroundTint="#BF3D3D"
            android:text="@string/nextButton" />

    </LinearLayout>

</ScrollView>