<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GouthamCondominiumActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            style="@style/header"
            android:text="condominium"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/condo1"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    style="@style/Details"
                    android:text="@string/condoAddress1"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/condoDiscription1"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/condoPrice1"
                    />
            </LinearLayout>

            <CheckBox
                android:id="@+id/gouthamCondominiumCheckBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/condo2"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    style="@style/Details"
                    android:text="@string/condoAddress2"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/condoDiscription2"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/condoPrice2"
                    />
            </LinearLayout>

            <CheckBox
                android:id="@+id/gouthamCondominiumCheckBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/condo3"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    style="@style/Details"
                    android:text="@string/condoAddress3"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/condoDiscription3"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/condoPrice3"
                    />
            </LinearLayout>

            <CheckBox
                android:id="@+id/gouthamCondominiumCheckBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/condo4"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    style="@style/Details"
                    android:text="@string/condoAddress4"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/condoDiscription4"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/condoPrice4"
                    />
            </LinearLayout>

            <CheckBox
                android:id="@+id/gouthamCondominiumCheckBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/condo5"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    style="@style/Details"
                    android:text="@string/condoAddress5"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/condoDiscription5"
                    />
                <TextView
                    style="@style/Details"
                    android:text="@string/condoPrice5"
                    />
            </LinearLayout>

            <CheckBox
                android:id="@+id/gouthamCondominiumCheckBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/gouthamCondominiumNextButton"
            style="@style/enter"
            android:background="#FFFFFF"
            android:backgroundTint="#CC3C3C"
            android:text="@string/nextButton" />

    </LinearLayout>

</ScrollView>